[package]
name = "server_rs"
version = "0.1.0"
authors = ["Jevo1900"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.6", features = ["tls"] }
rocket_contrib = { version = "0.4.6", features = ["handlebars_templates"] }
num_cpus = "1.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"